// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimePanel disableMinutes work 1`] = `
"<div class=\\"ix-time-panel\\">
  <ul class=\\"ix-time-panel-column\\">
    <li class=\\"ix-time-panel-cell ix-time-panel-cell-selected\\">00</li>
    <li class=\\"ix-time-panel-cell\\">01</li>
    <li class=\\"ix-time-panel-cell\\">02</li>
    <li class=\\"ix-time-panel-cell\\">03</li>
    <li class=\\"ix-time-panel-cell\\">04</li>
    <li class=\\"ix-time-panel-cell\\">05</li>
    <li class=\\"ix-time-panel-cell\\">06</li>
    <li class=\\"ix-time-panel-cell\\">07</li>
    <li class=\\"ix-time-panel-cell\\">08</li>
    <li class=\\"ix-time-panel-cell\\">09</li>
    <li class=\\"ix-time-panel-cell\\">10</li>
    <li class=\\"ix-time-panel-cell\\">11</li>
    <li class=\\"ix-time-panel-cell\\">12</li>
    <li class=\\"ix-time-panel-cell\\">13</li>
    <li class=\\"ix-time-panel-cell\\">14</li>
    <li class=\\"ix-time-panel-cell\\">15</li>
    <li class=\\"ix-time-panel-cell\\">16</li>
    <li class=\\"ix-time-panel-cell\\">17</li>
    <li class=\\"ix-time-panel-cell\\">18</li>
    <li class=\\"ix-time-panel-cell\\">19</li>
    <li class=\\"ix-time-panel-cell\\">20</li>
    <li class=\\"ix-time-panel-cell\\">21</li>
    <li class=\\"ix-time-panel-cell\\">22</li>
    <li class=\\"ix-time-panel-cell\\">23</li>
  </ul>
  <ul class=\\"ix-time-panel-column\\">
    <li class=\\"ix-time-panel-cell ix-time-panel-cell-selected\\">00</li>
    <li class=\\"ix-time-panel-cell ix-time-panel-cell-disabled\\">01</li>
    <li class=\\"ix-time-panel-cell ix-time-panel-cell-disabled\\">02</li>
    <li class=\\"ix-time-panel-cell ix-time-panel-cell-disabled\\">03</li>
    <li class=\\"ix-time-panel-cell ix-time-panel-cell-disabled\\">04</li>
    <li class=\\"ix-time-panel-cell ix-time-panel-cell-disabled\\">05</li>
    <li class=\\"ix-time-panel-cell\\">06</li>
    <li class=\\"ix-time-panel-cell\\">07</li>
    <li class=\\"ix-time-panel-cell\\">08</li>
    <li class=\\"ix-time-panel-cell\\">09</li>
    <li class=\\"ix-time-panel-cell\\">10</li>
    <li class=\\"ix-time-panel-cell\\">11</li>
    <li class=\\"ix-time-panel-cell\\">12</li>
    <li class=\\"ix-time-panel-cell\\">13</li>
    <li class=\\"ix-time-panel-cell\\">14</li>
    <li class=\\"ix-time-panel-cell\\">15</li>
    <li class=\\"ix-time-panel-cell\\">16</li>
    <li class=\\"ix-time-panel-cell\\">17</li>
    <li class=\\"ix-time-panel-cell\\">18</li>
    <li class=\\"ix-time-panel-cell\\">19</li>
    <li class=\\"ix-time-panel-cell\\">20</li>
    <li class=\\"ix-time-panel-cell\\">21</li>
    <li class=\\"ix-time-panel-cell\\">22</li>
    <li class=\\"ix-time-panel-cell\\">23</li>
    <li class=\\"ix-time-panel-cell\\">24</li>
    <li class=\\"ix-time-panel-cell\\">25</li>
    <li class=\\"ix-time-panel-cell\\">26</li>
    <li class=\\"ix-time-panel-cell\\">27</li>
    <li class=\\"ix-time-panel-cell\\">28</li>
    <li class=\\"ix-time-panel-cell\\">29</li>
    <li class=\\"ix-time-panel-cell\\">30</li>
    <li class=\\"ix-time-panel-cell\\">31</li>
    <li class=\\"ix-time-panel-cell\\">32</li>
    <li class=\\"ix-time-panel-cell\\">33</li>
    <li class=\\"ix-time-panel-cell\\">34</li>
    <li class=\\"ix-time-panel-cell\\">35</li>
    <li class=\\"ix-time-panel-cell\\">36</li>
    <li class=\\"ix-time-panel-cell\\">37</li>
    <li class=\\"ix-time-panel-cell\\">38</li>
    <li class=\\"ix-time-panel-cell\\">39</li>
    <li class=\\"ix-time-panel-cell\\">40</li>
    <li class=\\"ix-time-panel-cell\\">41</li>
    <li class=\\"ix-time-panel-cell\\">42</li>
    <li class=\\"ix-time-panel-cell\\">43</li>
    <li class=\\"ix-time-panel-cell\\">44</li>
    <li class=\\"ix-time-panel-cell\\">45</li>
    <li class=\\"ix-time-panel-cell\\">46</li>
    <li class=\\"ix-time-panel-cell\\">47</li>
    <li class=\\"ix-time-panel-cell\\">48</li>
    <li class=\\"ix-time-panel-cell\\">49</li>
    <li class=\\"ix-time-panel-cell\\">50</li>
    <li class=\\"ix-time-panel-cell\\">51</li>
    <li class=\\"ix-time-panel-cell\\">52</li>
    <li class=\\"ix-time-panel-cell\\">53</li>
    <li class=\\"ix-time-panel-cell\\">54</li>
    <li class=\\"ix-time-panel-cell\\">55</li>
    <li class=\\"ix-time-panel-cell\\">56</li>
    <li class=\\"ix-time-panel-cell\\">57</li>
    <li class=\\"ix-time-panel-cell\\">58</li>
    <li class=\\"ix-time-panel-cell\\">59</li>
  </ul>
  <ul class=\\"ix-time-panel-column\\">
    <li class=\\"ix-time-panel-cell ix-time-panel-cell-selected\\">00</li>
    <li class=\\"ix-time-panel-cell\\">01</li>
    <li class=\\"ix-time-panel-cell\\">02</li>
    <li class=\\"ix-time-panel-cell\\">03</li>
    <li class=\\"ix-time-panel-cell\\">04</li>
    <li class=\\"ix-time-panel-cell\\">05</li>
    <li class=\\"ix-time-panel-cell\\">06</li>
    <li class=\\"ix-time-panel-cell\\">07</li>
    <li class=\\"ix-time-panel-cell\\">08</li>
    <li class=\\"ix-time-panel-cell\\">09</li>
    <li class=\\"ix-time-panel-cell\\">10</li>
    <li class=\\"ix-time-panel-cell\\">11</li>
    <li class=\\"ix-time-panel-cell\\">12</li>
    <li class=\\"ix-time-panel-cell\\">13</li>
    <li class=\\"ix-time-panel-cell\\">14</li>
    <li class=\\"ix-time-panel-cell\\">15</li>
    <li class=\\"ix-time-panel-cell\\">16</li>
    <li class=\\"ix-time-panel-cell\\">17</li>
    <li class=\\"ix-time-panel-cell\\">18</li>
    <li class=\\"ix-time-panel-cell\\">19</li>
    <li class=\\"ix-time-panel-cell\\">20</li>
    <li class=\\"ix-time-panel-cell\\">21</li>
    <li class=\\"ix-time-panel-cell\\">22</li>
    <li class=\\"ix-time-panel-cell\\">23</li>
    <li class=\\"ix-time-panel-cell\\">24</li>
    <li class=\\"ix-time-panel-cell\\">25</li>
    <li class=\\"ix-time-panel-cell\\">26</li>
    <li class=\\"ix-time-panel-cell\\">27</li>
    <li class=\\"ix-time-panel-cell\\">28</li>
    <li class=\\"ix-time-panel-cell\\">29</li>
    <li class=\\"ix-time-panel-cell\\">30</li>
    <li class=\\"ix-time-panel-cell\\">31</li>
    <li class=\\"ix-time-panel-cell\\">32</li>
    <li class=\\"ix-time-panel-cell\\">33</li>
    <li class=\\"ix-time-panel-cell\\">34</li>
    <li class=\\"ix-time-panel-cell\\">35</li>
    <li class=\\"ix-time-panel-cell\\">36</li>
    <li class=\\"ix-time-panel-cell\\">37</li>
    <li class=\\"ix-time-panel-cell\\">38</li>
    <li class=\\"ix-time-panel-cell\\">39</li>
    <li class=\\"ix-time-panel-cell\\">40</li>
    <li class=\\"ix-time-panel-cell\\">41</li>
    <li class=\\"ix-time-panel-cell\\">42</li>
    <li class=\\"ix-time-panel-cell\\">43</li>
    <li class=\\"ix-time-panel-cell\\">44</li>
    <li class=\\"ix-time-panel-cell\\">45</li>
    <li class=\\"ix-time-panel-cell\\">46</li>
    <li class=\\"ix-time-panel-cell\\">47</li>
    <li class=\\"ix-time-panel-cell\\">48</li>
    <li class=\\"ix-time-panel-cell\\">49</li>
    <li class=\\"ix-time-panel-cell\\">50</li>
    <li class=\\"ix-time-panel-cell\\">51</li>
    <li class=\\"ix-time-panel-cell\\">52</li>
    <li class=\\"ix-time-panel-cell\\">53</li>
    <li class=\\"ix-time-panel-cell\\">54</li>
    <li class=\\"ix-time-panel-cell\\">55</li>
    <li class=\\"ix-time-panel-cell\\">56</li>
    <li class=\\"ix-time-panel-cell\\">57</li>
    <li class=\\"ix-time-panel-cell\\">58</li>
    <li class=\\"ix-time-panel-cell\\">59</li>
  </ul>
</div>"
`;

exports[`TimePanel disableSeconds work 1`] = `
"<div class=\\"ix-time-panel\\">
  <ul class=\\"ix-time-panel-column\\">
    <li class=\\"ix-time-panel-cell ix-time-panel-cell-selected\\">00</li>
    <li class=\\"ix-time-panel-cell\\">01</li>
    <li class=\\"ix-time-panel-cell\\">02</li>
    <li class=\\"ix-time-panel-cell\\">03</li>
    <li class=\\"ix-time-panel-cell\\">04</li>
    <li class=\\"ix-time-panel-cell\\">05</li>
    <li class=\\"ix-time-panel-cell\\">06</li>
    <li class=\\"ix-time-panel-cell\\">07</li>
    <li class=\\"ix-time-panel-cell\\">08</li>
    <li class=\\"ix-time-panel-cell\\">09</li>
    <li class=\\"ix-time-panel-cell\\">10</li>
    <li class=\\"ix-time-panel-cell\\">11</li>
    <li class=\\"ix-time-panel-cell\\">12</li>
    <li class=\\"ix-time-panel-cell\\">13</li>
    <li class=\\"ix-time-panel-cell\\">14</li>
    <li class=\\"ix-time-panel-cell\\">15</li>
    <li class=\\"ix-time-panel-cell\\">16</li>
    <li class=\\"ix-time-panel-cell\\">17</li>
    <li class=\\"ix-time-panel-cell\\">18</li>
    <li class=\\"ix-time-panel-cell\\">19</li>
    <li class=\\"ix-time-panel-cell\\">20</li>
    <li class=\\"ix-time-panel-cell\\">21</li>
    <li class=\\"ix-time-panel-cell\\">22</li>
    <li class=\\"ix-time-panel-cell\\">23</li>
  </ul>
  <ul class=\\"ix-time-panel-column\\">
    <li class=\\"ix-time-panel-cell ix-time-panel-cell-selected\\">00</li>
    <li class=\\"ix-time-panel-cell\\">01</li>
    <li class=\\"ix-time-panel-cell\\">02</li>
    <li class=\\"ix-time-panel-cell\\">03</li>
    <li class=\\"ix-time-panel-cell\\">04</li>
    <li class=\\"ix-time-panel-cell\\">05</li>
    <li class=\\"ix-time-panel-cell\\">06</li>
    <li class=\\"ix-time-panel-cell\\">07</li>
    <li class=\\"ix-time-panel-cell\\">08</li>
    <li class=\\"ix-time-panel-cell\\">09</li>
    <li class=\\"ix-time-panel-cell\\">10</li>
    <li class=\\"ix-time-panel-cell\\">11</li>
    <li class=\\"ix-time-panel-cell\\">12</li>
    <li class=\\"ix-time-panel-cell\\">13</li>
    <li class=\\"ix-time-panel-cell\\">14</li>
    <li class=\\"ix-time-panel-cell\\">15</li>
    <li class=\\"ix-time-panel-cell\\">16</li>
    <li class=\\"ix-time-panel-cell\\">17</li>
    <li class=\\"ix-time-panel-cell\\">18</li>
    <li class=\\"ix-time-panel-cell\\">19</li>
    <li class=\\"ix-time-panel-cell\\">20</li>
    <li class=\\"ix-time-panel-cell\\">21</li>
    <li class=\\"ix-time-panel-cell\\">22</li>
    <li class=\\"ix-time-panel-cell\\">23</li>
    <li class=\\"ix-time-panel-cell\\">24</li>
    <li class=\\"ix-time-panel-cell\\">25</li>
    <li class=\\"ix-time-panel-cell\\">26</li>
    <li class=\\"ix-time-panel-cell\\">27</li>
    <li class=\\"ix-time-panel-cell\\">28</li>
    <li class=\\"ix-time-panel-cell\\">29</li>
    <li class=\\"ix-time-panel-cell\\">30</li>
    <li class=\\"ix-time-panel-cell\\">31</li>
    <li class=\\"ix-time-panel-cell\\">32</li>
    <li class=\\"ix-time-panel-cell\\">33</li>
    <li class=\\"ix-time-panel-cell\\">34</li>
    <li class=\\"ix-time-panel-cell\\">35</li>
    <li class=\\"ix-time-panel-cell\\">36</li>
    <li class=\\"ix-time-panel-cell\\">37</li>
    <li class=\\"ix-time-panel-cell\\">38</li>
    <li class=\\"ix-time-panel-cell\\">39</li>
    <li class=\\"ix-time-panel-cell\\">40</li>
    <li class=\\"ix-time-panel-cell\\">41</li>
    <li class=\\"ix-time-panel-cell\\">42</li>
    <li class=\\"ix-time-panel-cell\\">43</li>
    <li class=\\"ix-time-panel-cell\\">44</li>
    <li class=\\"ix-time-panel-cell\\">45</li>
    <li class=\\"ix-time-panel-cell\\">46</li>
    <li class=\\"ix-time-panel-cell\\">47</li>
    <li class=\\"ix-time-panel-cell\\">48</li>
    <li class=\\"ix-time-panel-cell\\">49</li>
    <li class=\\"ix-time-panel-cell\\">50</li>
    <li class=\\"ix-time-panel-cell\\">51</li>
    <li class=\\"ix-time-panel-cell\\">52</li>
    <li class=\\"ix-time-panel-cell\\">53</li>
    <li class=\\"ix-time-panel-cell\\">54</li>
    <li class=\\"ix-time-panel-cell\\">55</li>
    <li class=\\"ix-time-panel-cell\\">56</li>
    <li class=\\"ix-time-panel-cell\\">57</li>
    <li class=\\"ix-time-panel-cell\\">58</li>
    <li class=\\"ix-time-panel-cell\\">59</li>
  </ul>
  <ul class=\\"ix-time-panel-column\\">
    <li class=\\"ix-time-panel-cell ix-time-panel-cell-selected\\">00</li>
    <li class=\\"ix-time-panel-cell ix-time-panel-cell-disabled\\">01</li>
    <li class=\\"ix-time-panel-cell ix-time-panel-cell-disabled\\">02</li>
    <li class=\\"ix-time-panel-cell ix-time-panel-cell-disabled\\">03</li>
    <li class=\\"ix-time-panel-cell ix-time-panel-cell-disabled\\">04</li>
    <li class=\\"ix-time-panel-cell ix-time-panel-cell-disabled\\">05</li>
    <li class=\\"ix-time-panel-cell\\">06</li>
    <li class=\\"ix-time-panel-cell\\">07</li>
    <li class=\\"ix-time-panel-cell\\">08</li>
    <li class=\\"ix-time-panel-cell\\">09</li>
    <li class=\\"ix-time-panel-cell\\">10</li>
    <li class=\\"ix-time-panel-cell\\">11</li>
    <li class=\\"ix-time-panel-cell\\">12</li>
    <li class=\\"ix-time-panel-cell\\">13</li>
    <li class=\\"ix-time-panel-cell\\">14</li>
    <li class=\\"ix-time-panel-cell\\">15</li>
    <li class=\\"ix-time-panel-cell\\">16</li>
    <li class=\\"ix-time-panel-cell\\">17</li>
    <li class=\\"ix-time-panel-cell\\">18</li>
    <li class=\\"ix-time-panel-cell\\">19</li>
    <li class=\\"ix-time-panel-cell\\">20</li>
    <li class=\\"ix-time-panel-cell\\">21</li>
    <li class=\\"ix-time-panel-cell\\">22</li>
    <li class=\\"ix-time-panel-cell\\">23</li>
    <li class=\\"ix-time-panel-cell\\">24</li>
    <li class=\\"ix-time-panel-cell\\">25</li>
    <li class=\\"ix-time-panel-cell\\">26</li>
    <li class=\\"ix-time-panel-cell\\">27</li>
    <li class=\\"ix-time-panel-cell\\">28</li>
    <li class=\\"ix-time-panel-cell\\">29</li>
    <li class=\\"ix-time-panel-cell\\">30</li>
    <li class=\\"ix-time-panel-cell\\">31</li>
    <li class=\\"ix-time-panel-cell\\">32</li>
    <li class=\\"ix-time-panel-cell\\">33</li>
    <li class=\\"ix-time-panel-cell\\">34</li>
    <li class=\\"ix-time-panel-cell\\">35</li>
    <li class=\\"ix-time-panel-cell\\">36</li>
    <li class=\\"ix-time-panel-cell\\">37</li>
    <li class=\\"ix-time-panel-cell\\">38</li>
    <li class=\\"ix-time-panel-cell\\">39</li>
    <li class=\\"ix-time-panel-cell\\">40</li>
    <li class=\\"ix-time-panel-cell\\">41</li>
    <li class=\\"ix-time-panel-cell\\">42</li>
    <li class=\\"ix-time-panel-cell\\">43</li>
    <li class=\\"ix-time-panel-cell\\">44</li>
    <li class=\\"ix-time-panel-cell\\">45</li>
    <li class=\\"ix-time-panel-cell\\">46</li>
    <li class=\\"ix-time-panel-cell\\">47</li>
    <li class=\\"ix-time-panel-cell\\">48</li>
    <li class=\\"ix-time-panel-cell\\">49</li>
    <li class=\\"ix-time-panel-cell\\">50</li>
    <li class=\\"ix-time-panel-cell\\">51</li>
    <li class=\\"ix-time-panel-cell\\">52</li>
    <li class=\\"ix-time-panel-cell\\">53</li>
    <li class=\\"ix-time-panel-cell\\">54</li>
    <li class=\\"ix-time-panel-cell\\">55</li>
    <li class=\\"ix-time-panel-cell\\">56</li>
    <li class=\\"ix-time-panel-cell\\">57</li>
    <li class=\\"ix-time-panel-cell\\">58</li>
    <li class=\\"ix-time-panel-cell\\">59</li>
  </ul>
</div>"
`;

exports[`TimePanel disabledHours work 1`] = `
"<div class=\\"ix-time-panel\\">
  <ul class=\\"ix-time-panel-column\\">
    <li class=\\"ix-time-panel-cell ix-time-panel-cell-selected\\">00</li>
    <li class=\\"ix-time-panel-cell ix-time-panel-cell-disabled\\">01</li>
    <li class=\\"ix-time-panel-cell ix-time-panel-cell-disabled\\">02</li>
    <li class=\\"ix-time-panel-cell ix-time-panel-cell-disabled\\">03</li>
    <li class=\\"ix-time-panel-cell ix-time-panel-cell-disabled\\">04</li>
    <li class=\\"ix-time-panel-cell ix-time-panel-cell-disabled\\">05</li>
    <li class=\\"ix-time-panel-cell\\">06</li>
    <li class=\\"ix-time-panel-cell\\">07</li>
    <li class=\\"ix-time-panel-cell\\">08</li>
    <li class=\\"ix-time-panel-cell\\">09</li>
    <li class=\\"ix-time-panel-cell\\">10</li>
    <li class=\\"ix-time-panel-cell\\">11</li>
    <li class=\\"ix-time-panel-cell\\">12</li>
    <li class=\\"ix-time-panel-cell\\">13</li>
    <li class=\\"ix-time-panel-cell\\">14</li>
    <li class=\\"ix-time-panel-cell\\">15</li>
    <li class=\\"ix-time-panel-cell\\">16</li>
    <li class=\\"ix-time-panel-cell\\">17</li>
    <li class=\\"ix-time-panel-cell\\">18</li>
    <li class=\\"ix-time-panel-cell\\">19</li>
    <li class=\\"ix-time-panel-cell\\">20</li>
    <li class=\\"ix-time-panel-cell\\">21</li>
    <li class=\\"ix-time-panel-cell\\">22</li>
    <li class=\\"ix-time-panel-cell\\">23</li>
  </ul>
  <ul class=\\"ix-time-panel-column\\">
    <li class=\\"ix-time-panel-cell ix-time-panel-cell-selected\\">00</li>
    <li class=\\"ix-time-panel-cell\\">01</li>
    <li class=\\"ix-time-panel-cell\\">02</li>
    <li class=\\"ix-time-panel-cell\\">03</li>
    <li class=\\"ix-time-panel-cell\\">04</li>
    <li class=\\"ix-time-panel-cell\\">05</li>
    <li class=\\"ix-time-panel-cell\\">06</li>
    <li class=\\"ix-time-panel-cell\\">07</li>
    <li class=\\"ix-time-panel-cell\\">08</li>
    <li class=\\"ix-time-panel-cell\\">09</li>
    <li class=\\"ix-time-panel-cell\\">10</li>
    <li class=\\"ix-time-panel-cell\\">11</li>
    <li class=\\"ix-time-panel-cell\\">12</li>
    <li class=\\"ix-time-panel-cell\\">13</li>
    <li class=\\"ix-time-panel-cell\\">14</li>
    <li class=\\"ix-time-panel-cell\\">15</li>
    <li class=\\"ix-time-panel-cell\\">16</li>
    <li class=\\"ix-time-panel-cell\\">17</li>
    <li class=\\"ix-time-panel-cell\\">18</li>
    <li class=\\"ix-time-panel-cell\\">19</li>
    <li class=\\"ix-time-panel-cell\\">20</li>
    <li class=\\"ix-time-panel-cell\\">21</li>
    <li class=\\"ix-time-panel-cell\\">22</li>
    <li class=\\"ix-time-panel-cell\\">23</li>
    <li class=\\"ix-time-panel-cell\\">24</li>
    <li class=\\"ix-time-panel-cell\\">25</li>
    <li class=\\"ix-time-panel-cell\\">26</li>
    <li class=\\"ix-time-panel-cell\\">27</li>
    <li class=\\"ix-time-panel-cell\\">28</li>
    <li class=\\"ix-time-panel-cell\\">29</li>
    <li class=\\"ix-time-panel-cell\\">30</li>
    <li class=\\"ix-time-panel-cell\\">31</li>
    <li class=\\"ix-time-panel-cell\\">32</li>
    <li class=\\"ix-time-panel-cell\\">33</li>
    <li class=\\"ix-time-panel-cell\\">34</li>
    <li class=\\"ix-time-panel-cell\\">35</li>
    <li class=\\"ix-time-panel-cell\\">36</li>
    <li class=\\"ix-time-panel-cell\\">37</li>
    <li class=\\"ix-time-panel-cell\\">38</li>
    <li class=\\"ix-time-panel-cell\\">39</li>
    <li class=\\"ix-time-panel-cell\\">40</li>
    <li class=\\"ix-time-panel-cell\\">41</li>
    <li class=\\"ix-time-panel-cell\\">42</li>
    <li class=\\"ix-time-panel-cell\\">43</li>
    <li class=\\"ix-time-panel-cell\\">44</li>
    <li class=\\"ix-time-panel-cell\\">45</li>
    <li class=\\"ix-time-panel-cell\\">46</li>
    <li class=\\"ix-time-panel-cell\\">47</li>
    <li class=\\"ix-time-panel-cell\\">48</li>
    <li class=\\"ix-time-panel-cell\\">49</li>
    <li class=\\"ix-time-panel-cell\\">50</li>
    <li class=\\"ix-time-panel-cell\\">51</li>
    <li class=\\"ix-time-panel-cell\\">52</li>
    <li class=\\"ix-time-panel-cell\\">53</li>
    <li class=\\"ix-time-panel-cell\\">54</li>
    <li class=\\"ix-time-panel-cell\\">55</li>
    <li class=\\"ix-time-panel-cell\\">56</li>
    <li class=\\"ix-time-panel-cell\\">57</li>
    <li class=\\"ix-time-panel-cell\\">58</li>
    <li class=\\"ix-time-panel-cell\\">59</li>
  </ul>
  <ul class=\\"ix-time-panel-column\\">
    <li class=\\"ix-time-panel-cell ix-time-panel-cell-selected\\">00</li>
    <li class=\\"ix-time-panel-cell\\">01</li>
    <li class=\\"ix-time-panel-cell\\">02</li>
    <li class=\\"ix-time-panel-cell\\">03</li>
    <li class=\\"ix-time-panel-cell\\">04</li>
    <li class=\\"ix-time-panel-cell\\">05</li>
    <li class=\\"ix-time-panel-cell\\">06</li>
    <li class=\\"ix-time-panel-cell\\">07</li>
    <li class=\\"ix-time-panel-cell\\">08</li>
    <li class=\\"ix-time-panel-cell\\">09</li>
    <li class=\\"ix-time-panel-cell\\">10</li>
    <li class=\\"ix-time-panel-cell\\">11</li>
    <li class=\\"ix-time-panel-cell\\">12</li>
    <li class=\\"ix-time-panel-cell\\">13</li>
    <li class=\\"ix-time-panel-cell\\">14</li>
    <li class=\\"ix-time-panel-cell\\">15</li>
    <li class=\\"ix-time-panel-cell\\">16</li>
    <li class=\\"ix-time-panel-cell\\">17</li>
    <li class=\\"ix-time-panel-cell\\">18</li>
    <li class=\\"ix-time-panel-cell\\">19</li>
    <li class=\\"ix-time-panel-cell\\">20</li>
    <li class=\\"ix-time-panel-cell\\">21</li>
    <li class=\\"ix-time-panel-cell\\">22</li>
    <li class=\\"ix-time-panel-cell\\">23</li>
    <li class=\\"ix-time-panel-cell\\">24</li>
    <li class=\\"ix-time-panel-cell\\">25</li>
    <li class=\\"ix-time-panel-cell\\">26</li>
    <li class=\\"ix-time-panel-cell\\">27</li>
    <li class=\\"ix-time-panel-cell\\">28</li>
    <li class=\\"ix-time-panel-cell\\">29</li>
    <li class=\\"ix-time-panel-cell\\">30</li>
    <li class=\\"ix-time-panel-cell\\">31</li>
    <li class=\\"ix-time-panel-cell\\">32</li>
    <li class=\\"ix-time-panel-cell\\">33</li>
    <li class=\\"ix-time-panel-cell\\">34</li>
    <li class=\\"ix-time-panel-cell\\">35</li>
    <li class=\\"ix-time-panel-cell\\">36</li>
    <li class=\\"ix-time-panel-cell\\">37</li>
    <li class=\\"ix-time-panel-cell\\">38</li>
    <li class=\\"ix-time-panel-cell\\">39</li>
    <li class=\\"ix-time-panel-cell\\">40</li>
    <li class=\\"ix-time-panel-cell\\">41</li>
    <li class=\\"ix-time-panel-cell\\">42</li>
    <li class=\\"ix-time-panel-cell\\">43</li>
    <li class=\\"ix-time-panel-cell\\">44</li>
    <li class=\\"ix-time-panel-cell\\">45</li>
    <li class=\\"ix-time-panel-cell\\">46</li>
    <li class=\\"ix-time-panel-cell\\">47</li>
    <li class=\\"ix-time-panel-cell\\">48</li>
    <li class=\\"ix-time-panel-cell\\">49</li>
    <li class=\\"ix-time-panel-cell\\">50</li>
    <li class=\\"ix-time-panel-cell\\">51</li>
    <li class=\\"ix-time-panel-cell\\">52</li>
    <li class=\\"ix-time-panel-cell\\">53</li>
    <li class=\\"ix-time-panel-cell\\">54</li>
    <li class=\\"ix-time-panel-cell\\">55</li>
    <li class=\\"ix-time-panel-cell\\">56</li>
    <li class=\\"ix-time-panel-cell\\">57</li>
    <li class=\\"ix-time-panel-cell\\">58</li>
    <li class=\\"ix-time-panel-cell\\">59</li>
  </ul>
</div>"
`;

exports[`TimePanel render work 1`] = `
"<div class=\\"ix-time-panel\\">
  <ul class=\\"ix-time-panel-column\\">
    <li class=\\"ix-time-panel-cell ix-time-panel-cell-selected\\">00</li>
    <li class=\\"ix-time-panel-cell\\">01</li>
    <li class=\\"ix-time-panel-cell\\">02</li>
    <li class=\\"ix-time-panel-cell\\">03</li>
    <li class=\\"ix-time-panel-cell\\">04</li>
    <li class=\\"ix-time-panel-cell\\">05</li>
    <li class=\\"ix-time-panel-cell\\">06</li>
    <li class=\\"ix-time-panel-cell\\">07</li>
    <li class=\\"ix-time-panel-cell\\">08</li>
    <li class=\\"ix-time-panel-cell\\">09</li>
    <li class=\\"ix-time-panel-cell\\">10</li>
    <li class=\\"ix-time-panel-cell\\">11</li>
    <li class=\\"ix-time-panel-cell\\">12</li>
    <li class=\\"ix-time-panel-cell\\">13</li>
    <li class=\\"ix-time-panel-cell\\">14</li>
    <li class=\\"ix-time-panel-cell\\">15</li>
    <li class=\\"ix-time-panel-cell\\">16</li>
    <li class=\\"ix-time-panel-cell\\">17</li>
    <li class=\\"ix-time-panel-cell\\">18</li>
    <li class=\\"ix-time-panel-cell\\">19</li>
    <li class=\\"ix-time-panel-cell\\">20</li>
    <li class=\\"ix-time-panel-cell\\">21</li>
    <li class=\\"ix-time-panel-cell\\">22</li>
    <li class=\\"ix-time-panel-cell\\">23</li>
  </ul>
  <ul class=\\"ix-time-panel-column\\">
    <li class=\\"ix-time-panel-cell ix-time-panel-cell-selected\\">00</li>
    <li class=\\"ix-time-panel-cell\\">01</li>
    <li class=\\"ix-time-panel-cell\\">02</li>
    <li class=\\"ix-time-panel-cell\\">03</li>
    <li class=\\"ix-time-panel-cell\\">04</li>
    <li class=\\"ix-time-panel-cell\\">05</li>
    <li class=\\"ix-time-panel-cell\\">06</li>
    <li class=\\"ix-time-panel-cell\\">07</li>
    <li class=\\"ix-time-panel-cell\\">08</li>
    <li class=\\"ix-time-panel-cell\\">09</li>
    <li class=\\"ix-time-panel-cell\\">10</li>
    <li class=\\"ix-time-panel-cell\\">11</li>
    <li class=\\"ix-time-panel-cell\\">12</li>
    <li class=\\"ix-time-panel-cell\\">13</li>
    <li class=\\"ix-time-panel-cell\\">14</li>
    <li class=\\"ix-time-panel-cell\\">15</li>
    <li class=\\"ix-time-panel-cell\\">16</li>
    <li class=\\"ix-time-panel-cell\\">17</li>
    <li class=\\"ix-time-panel-cell\\">18</li>
    <li class=\\"ix-time-panel-cell\\">19</li>
    <li class=\\"ix-time-panel-cell\\">20</li>
    <li class=\\"ix-time-panel-cell\\">21</li>
    <li class=\\"ix-time-panel-cell\\">22</li>
    <li class=\\"ix-time-panel-cell\\">23</li>
    <li class=\\"ix-time-panel-cell\\">24</li>
    <li class=\\"ix-time-panel-cell\\">25</li>
    <li class=\\"ix-time-panel-cell\\">26</li>
    <li class=\\"ix-time-panel-cell\\">27</li>
    <li class=\\"ix-time-panel-cell\\">28</li>
    <li class=\\"ix-time-panel-cell\\">29</li>
    <li class=\\"ix-time-panel-cell\\">30</li>
    <li class=\\"ix-time-panel-cell\\">31</li>
    <li class=\\"ix-time-panel-cell\\">32</li>
    <li class=\\"ix-time-panel-cell\\">33</li>
    <li class=\\"ix-time-panel-cell\\">34</li>
    <li class=\\"ix-time-panel-cell\\">35</li>
    <li class=\\"ix-time-panel-cell\\">36</li>
    <li class=\\"ix-time-panel-cell\\">37</li>
    <li class=\\"ix-time-panel-cell\\">38</li>
    <li class=\\"ix-time-panel-cell\\">39</li>
    <li class=\\"ix-time-panel-cell\\">40</li>
    <li class=\\"ix-time-panel-cell\\">41</li>
    <li class=\\"ix-time-panel-cell\\">42</li>
    <li class=\\"ix-time-panel-cell\\">43</li>
    <li class=\\"ix-time-panel-cell\\">44</li>
    <li class=\\"ix-time-panel-cell\\">45</li>
    <li class=\\"ix-time-panel-cell\\">46</li>
    <li class=\\"ix-time-panel-cell\\">47</li>
    <li class=\\"ix-time-panel-cell\\">48</li>
    <li class=\\"ix-time-panel-cell\\">49</li>
    <li class=\\"ix-time-panel-cell\\">50</li>
    <li class=\\"ix-time-panel-cell\\">51</li>
    <li class=\\"ix-time-panel-cell\\">52</li>
    <li class=\\"ix-time-panel-cell\\">53</li>
    <li class=\\"ix-time-panel-cell\\">54</li>
    <li class=\\"ix-time-panel-cell\\">55</li>
    <li class=\\"ix-time-panel-cell\\">56</li>
    <li class=\\"ix-time-panel-cell\\">57</li>
    <li class=\\"ix-time-panel-cell\\">58</li>
    <li class=\\"ix-time-panel-cell\\">59</li>
  </ul>
  <ul class=\\"ix-time-panel-column\\">
    <li class=\\"ix-time-panel-cell ix-time-panel-cell-selected\\">00</li>
    <li class=\\"ix-time-panel-cell\\">01</li>
    <li class=\\"ix-time-panel-cell\\">02</li>
    <li class=\\"ix-time-panel-cell\\">03</li>
    <li class=\\"ix-time-panel-cell\\">04</li>
    <li class=\\"ix-time-panel-cell\\">05</li>
    <li class=\\"ix-time-panel-cell\\">06</li>
    <li class=\\"ix-time-panel-cell\\">07</li>
    <li class=\\"ix-time-panel-cell\\">08</li>
    <li class=\\"ix-time-panel-cell\\">09</li>
    <li class=\\"ix-time-panel-cell\\">10</li>
    <li class=\\"ix-time-panel-cell\\">11</li>
    <li class=\\"ix-time-panel-cell\\">12</li>
    <li class=\\"ix-time-panel-cell\\">13</li>
    <li class=\\"ix-time-panel-cell\\">14</li>
    <li class=\\"ix-time-panel-cell\\">15</li>
    <li class=\\"ix-time-panel-cell\\">16</li>
    <li class=\\"ix-time-panel-cell\\">17</li>
    <li class=\\"ix-time-panel-cell\\">18</li>
    <li class=\\"ix-time-panel-cell\\">19</li>
    <li class=\\"ix-time-panel-cell\\">20</li>
    <li class=\\"ix-time-panel-cell\\">21</li>
    <li class=\\"ix-time-panel-cell\\">22</li>
    <li class=\\"ix-time-panel-cell\\">23</li>
    <li class=\\"ix-time-panel-cell\\">24</li>
    <li class=\\"ix-time-panel-cell\\">25</li>
    <li class=\\"ix-time-panel-cell\\">26</li>
    <li class=\\"ix-time-panel-cell\\">27</li>
    <li class=\\"ix-time-panel-cell\\">28</li>
    <li class=\\"ix-time-panel-cell\\">29</li>
    <li class=\\"ix-time-panel-cell\\">30</li>
    <li class=\\"ix-time-panel-cell\\">31</li>
    <li class=\\"ix-time-panel-cell\\">32</li>
    <li class=\\"ix-time-panel-cell\\">33</li>
    <li class=\\"ix-time-panel-cell\\">34</li>
    <li class=\\"ix-time-panel-cell\\">35</li>
    <li class=\\"ix-time-panel-cell\\">36</li>
    <li class=\\"ix-time-panel-cell\\">37</li>
    <li class=\\"ix-time-panel-cell\\">38</li>
    <li class=\\"ix-time-panel-cell\\">39</li>
    <li class=\\"ix-time-panel-cell\\">40</li>
    <li class=\\"ix-time-panel-cell\\">41</li>
    <li class=\\"ix-time-panel-cell\\">42</li>
    <li class=\\"ix-time-panel-cell\\">43</li>
    <li class=\\"ix-time-panel-cell\\">44</li>
    <li class=\\"ix-time-panel-cell\\">45</li>
    <li class=\\"ix-time-panel-cell\\">46</li>
    <li class=\\"ix-time-panel-cell\\">47</li>
    <li class=\\"ix-time-panel-cell\\">48</li>
    <li class=\\"ix-time-panel-cell\\">49</li>
    <li class=\\"ix-time-panel-cell\\">50</li>
    <li class=\\"ix-time-panel-cell\\">51</li>
    <li class=\\"ix-time-panel-cell\\">52</li>
    <li class=\\"ix-time-panel-cell\\">53</li>
    <li class=\\"ix-time-panel-cell\\">54</li>
    <li class=\\"ix-time-panel-cell\\">55</li>
    <li class=\\"ix-time-panel-cell\\">56</li>
    <li class=\\"ix-time-panel-cell\\">57</li>
    <li class=\\"ix-time-panel-cell\\">58</li>
    <li class=\\"ix-time-panel-cell\\">59</li>
  </ul>
</div>"
`;
